; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Pointer.c_Box_Del.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Pointer.c_Box_Del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @Box_Del to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Box_Del(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i64 @Box_Deref(i64 %4)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = call i32 @del(i64 %9)
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i64, i64* %2, align 8
  %13 = call i32 @Box_Ref(i64 %12, i32* null)
  ret void
}

declare dso_local i64 @Box_Deref(i64) #1

declare dso_local i32 @del(i64) #1

declare dso_local i32 @Box_Ref(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
